src/styles/global.css
@import 'tailwindcss';

:root {
  --canvas-default: #191521;
  --canvas-primary: #f9f6ff;
  --canvas-muted: #efecf4;
  --fg-default: #191521;
  --fg-muted: #646066;
  --fg-default-inverted: #f9f6ff;
  --fg-muted-inverted: #b7b5b9;
  --accent: #c7a4dd;
  --outline: #eae7f0;
}

@theme {
  --font-sans: 'Mona Sans Variable', ui-sans-serif, system-ui, sans-serif;
  --color-canvas: var(--canvas-default);
  --color-canvas-primary: var(--canvas-primary);
  --color-canvas-muted: var(--canvas-muted);
  --color-fg: var(--fg-default);
  --color-fg-muted: var(--fg-muted);
  --color-fg-inverted: var(--fg-default-inverted);
  --color-fg-muted-inverted: var(--fg-muted-inverted);
  --color-accent: var(--accent);
  --color-outline: var(--outline);

  --breakpoint-xs: 475px;

  --animate-fade-up: fade-up 0.5s;

  @keyframes fade-up {
    0% {
      opacity: 0;
      transform: translateY(10px);
    }
    80% {
      opacity: 0.6;
    }
    100% {
      opacity: 1;
      transform: translateY(0px);
    }
  }
}

:root {
  scrollbar-gutter: stable;
  scroll-behavior: smooth;
}

body {
  @apply text-fg bg-canvas min-h-screen min-w-[375px] antialiased;
}

